--- a/bundle.css
+++ b/bundle.css
@@ -70,9 +70,32 @@
 	vertical-align: middle;
 	width: 50px;
 }
+.Map{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #CCCCCC;
+	width: 500px;
+	height: 500px;
+	min-width: 500px;
+	min-height: 500px;
+}
+
+.Map table{
+	width: 94%;
+	height: 94%;
+	background-color: #a2d9ff;
+}
+
 .Piece{
-	width: 50px;
-	height: 50px;
+	display: flex;
+	width: 100%;
+	height: 100%;
+	min-height: 50px;
+	min-width: 50px;
+	box-sizing: border-box;
+	justify-content:center;
+	align-items: center;
 	background: #FFFFFF;
 	border: solid 1px #000000;
 	border-radius: 5px;
@@ -83,16 +106,22 @@
 	vertical-align: middle;
 	color: #282C34;
 	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	transition-duration: 0.2s;
+	transition-property: background-color;
 	
 }
 
 .Piece input{
-	width: 50px;
-	height: 50px;
+	width: 100%;
+	height: 100%;
 	text-align: center;
 	vertical-align: middle;
 	font-size: 25px;
 	font-weight: bold;
+	color: #282C34;
 	background: none;
 	border: none;
 }
@@ -103,6 +132,7 @@
 }
 
 .Piece .blackPot{
+	display: block;
 	width: 10px;
 	height: 10px;
 	border-radius: 5px;
