--- a/css/components/Piece.css
+++ b/css/components/Piece.css
@@ -1,6 +1,12 @@
 .Piece{
-	width: 50px;
-	height: 50px;
+	display: flex;
+	width: 100%;
+	height: 100%;
+	min-height: 50px;
+	min-width: 50px;
+	box-sizing: border-box;
+	justify-content:center;
+	align-items: center;
 	background: #FFFFFF;
 	border: solid 1px #000000;
 	border-radius: 5px;
@@ -11,16 +17,22 @@
 	vertical-align: middle;
 	color: #282C34;
 	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	transition-duration: 0.2s;
+	transition-property: background-color;
 	
 }
 
 .Piece input{
-	width: 50px;
-	height: 50px;
+	width: 100%;
+	height: 100%;
 	text-align: center;
 	vertical-align: middle;
 	font-size: 25px;
 	font-weight: bold;
+	color: #282C34;
 	background: none;
 	border: none;
 }
@@ -31,6 +43,7 @@
 }
 
 .Piece .blackPot{
+	display: block;
 	width: 10px;
 	height: 10px;
 	border-radius: 5px;
